# container-id-research

./: .dvcignore  .gitignore  KAGGLE_TRAINING_GUIDE.md  README.md  active_status.md  dvc.yaml  kaggle_training_notebook.py  params.yaml  pyproject.toml
.dvc/: .gitignore  config
data/: annotations.dvc  data_config.yaml  raw.dvc
demo/: README.md  __init__.py  app.py
demos/: README.md  manage_demos.py  ports_config.py
demos/align/: CHANGELOG.md  README.md  __init__.py  app.py  launch.py
demos/det/: README.md  app.py  launch.py
demos/door_quality/: MIGRATION.md  README.md  __init__.py  app.py  launch.py
demos/loc/: README.md  __init__.py  app.py  launch.py  test_pipeline.py
demos/ocr/: README.md  __init__.py  app.py  launch.py  launch.sh  verify.py
demos/pipeline/: README.md  __init__.py  app.py  launch.py
docs/data-labeling/: attribute-annotation-guideline.md
docs/data-splitting/: technical-specification-data-splitting.md
docs/general/: architecture.md  data-provenance.md
docs/guides/: kaggle_training.md
documentation/data-labeling/: container-door-labeling-guideline.md  (+1 more)
experiments/: 001_det_baseline.yaml  001_loc_baseline.yaml  002_loc_improved.yaml  003_loc_higher_pose_weight.yaml  README.md
notebooks/: 00_inference_data_preparation.ipynb  01-annotated-image-eda.ipynb  03_sharpness_analysis.ipynb  04_naturalness_brisque.ipynb  geometric_statistics.module_4.ipynb  kaggle_ssh_tunnel.ipynb
scripts/: README.md  download_data.sh  export_models.py  finalize_training.sh  run_demo.py  run_pipeline.sh  run_training.sh  setup_dvc.sh  setup_kaggle.sh  setup_kaggle_simple.sh  verify_config.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+188 files in other folders)
