[project]
name = "container-id-research"
version = "0.1.0"
description = "This project is for research on container id extraction pipeline for SOWATCO company"
authors = [
    {name = "duyhxm"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dvc[gdrive] (>=3.64.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "pyopenssl (==24.2.1)",
    "ultralytics (>=8.3.235,<9.0.0)",
    "wandb (>=0.23.1,<0.24.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "*", from = "src" },
    { include = "scripts" }
]
